--- a/.github/workflows/securitycheck.yml
+++ b/.github/workflows/securitycheck.yml
@@ -34,4 +34,4 @@ jobs:
       - name: Testing with CFN Lint Command
         uses: scottbrenner/cfn-lint-action@v2
         with:
-          command: cfn-lint -t ./src/*.yaml
+          command: cfn-lint -t ./**/*.yaml
