--- a/src/template_lambda_APIG.yaml
+++ b/src/template_lambda_APIG.yaml
@@ -160,7 +160,6 @@ Resources:
           - Ref: pVPCSubnet
       Handler: index.handler
       MemorySize: 256
-      ReservedConcurrentExecutions: 100
       Role: !GetAtt LambdaIamRole.Arn
       Runtime: python3.8
       Timeout: 60
@@ -169,6 +168,8 @@ Resources:
   LambdaIamRole:
     Type: AWS::IAM::Role
     Properties:
+      ManagedPolicyArns:
+       - "arn:aws:iam::aws:policy/service-role/AWSLambdaVPCAccessExecutionRole"
       AssumeRolePolicyDocument:
         Version: '2012-10-17'
         Statement:
