--- a/src/template_lambda_url.yaml
+++ b/src/template_lambda_url.yaml
@@ -105,3 +105,7 @@ Resources:
               - logs:CreateLogStream
               - logs:PutLogEvents
               Resource: arn:aws:logs:*:*:*
+Outputs:
+  FunctionUrl:
+   Description: Lambda Function Url
+   Value: !GetAtt LambdaFunctionUrl.FunctionUrl
